# github-org-manager

./: .bumpversion.cfg  .bumpversion.cfg.license  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  REUSE.toml  pyproject.toml  release-please-config.json  renovate.json5  uv.lock.license
.github/: dependabot.yml
.github/actions/poetrybuild/: action.yaml
.github/actions/uvbuild/: action.yaml
.github/workflows/: publish.yaml  real-test.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
config/: app_config.sample.yaml  openrailassociation.yaml
config/example/: app.yaml  org.yaml
config/example/teams/: myteams.yaml
gh_org_mgr/: __init__.py  _config.py  _gh_api.py  _gh_org.py  _helpers.py  _setup_team.py  _stats.py  manage.py
gh_team_mgr/: __init__.py  _config.py  _gh_org.py  configure_teams.py
peoplemgmt/: __init__.py  _config.py  _gh_api.py  config.py  configure_teams.py  ghapi.py  osrd.py
tests/data/config/: .gitignore  app.yaml
tests/data/config/org_files/: org_changes.yaml  org_orig.yaml
tests/data/config/teams_files/: teams_changes.yaml  teams_orig.yaml
