# SPDX-FileCopyrightText: 2024 DB Systel GmbH
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "github-org-manager"
version = "0.7.6"
description = "Manage a GitHub Organization, its teams, repository permissions, and more"
authors = [{ name = "Max Mehl", email = "max.mehl@deutschebahn.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "github",
    "github-management",
    "permissions",
    "access-control",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pygithub>=2.8.1,<3",
    "pyyaml>=6.0.3,<7",
    "requests>=2.32.5,<3",
    "python-slugify>=8.0.4,<9",
    "jsonschema>=4.25.1,<5",
]

[project.urls]
Repository = "https://github.com/OpenRailAssociation/github-org-manager"

[project.scripts]
gh-org-mgr = "gh_org_mgr.manage:main"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "bump-my-version>=1.2.3,<2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["gh_org_mgr"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T",
    "FBT",
    "LOG015",
    "COM812",
    "ERA001",
    "S310",
    "D205",
    "D212",
    "PTH123",
]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR", "PT011", "ANN001"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["gh_org_mgr"]

# Bump-My-Version
[tool.bumpversion]
commit = true
tag = true
sign_tags = true
allow_dirty = false
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "uv.lock"
search = """
[[package]]
name = "github-org-manager"
version = "{current_version}"
"""
replace = """
[[package]]
name = "github-org-manager"
version = "{new_version}"
"""
